app/css/app.css
/*BLUE = #222E7A ???
RED = #fa4349 ???*/

body,
html {
    height: 100%;
    margin: 0;
    padding: 0;
}

#app {
    min-height: 100%;
    position: relative;
}

#content {
    padding-bottom: 100px;
}

#footer {
    background: #fa4349;
    color: white;
    width: 100%;
    height: 60px;
    position: absolute;
    bottom: 0;
    left: 0;
    text-align: center;
}

#headerBackground {
    background-image: url('/img/background/bluebackground.jpg');
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
}

/* NAVBAR */

.nav-header {
    margin-bottom: 0px;
    margin-top: 5px;
}

.nav-container {
    background-color: #fa4349;
    text-align: center;
    margin: 0 auto;
}

ul {
    display: inline-block;
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: #fa4349;
}

li {
    float: left;
}

li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

li a:hover,
.activeOption {
    background-color: #fdafb2;
    color: #222E7A;
    text-decoration: none;
}

/* END NAVBAR */

#logo {
    margin-left: 15px;
    width: 120px;
    height: 85px;
}

span {
    line-height: 150px;
}

#hometitle {
    color: white;
    font-size: 50px;
    /* margin-top: 50px; */
    text-align: center;
    vertical-align: center;
}

#homesubtitle {
    color: white;
    font-size: 30px;
    margin-bottom: 21%;
    text-align: center;
    vertical-align: center;
}

#home,
#aboutme,
#projects {
    text-align: center;
}

.homePic {
    float: right;
}

.contactInfoContainer {
    height: 400px;
    display: flex;
    justify-content: center;
    align-items: center;
    float: left;
}

.jumbotron {
    background-color: #fdafb2 !important;
}

.contactInfo {
    padding: 50px;
}

@media screen and (max-width: 991px) {
    .contactInfoContainer {
        height: 250px;
        float: none;
        padding: 25px;
    }
    .homePic {
        float: none;
    }
}

thead {
    background-color: #222E7A;
    color: white;
}

#lifeExp {
    width: 25%;
    height: 25%;
}

#projectImage {
    opacity: 1;
}

#projectImage:hover {
    opacity: 0.7;
}

@media screen and (max-width: 800px) {
    #projectImage {
        width: 300px;
        height: 150px;
    }
    .projectContainer {
        height: 200px !important;
        width: 500px;
        margin: 0 auto !important;
    }
    .projectInfoContainer {
        height: 200px !important;
        width: 500px;
    }
    .projectInfo {
        height: 50px;
        width: 90%;
        font-size: 70%;
        vertical-align: top !important;
    }
}

.btn {
    background-color: #222E7A;
}

.panel-title {
    color: #222E7A !important;
}

